// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with customStyles and multiple types 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Array [
        Object {
          "fontStyle": "italic",
          "fontWeight": "bold",
        },
        Object {
          "fontStyle": "italic",
          "fontWeight": "bold",
        },
      ],
      undefined,
    ]
  }
>
  
</Text>
`;

exports[`renders correctly with customStyles and single type 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Array [
        Object {
          "fontWeight": "bold",
        },
        Object {
          "fontWeight": "bold",
        },
      ],
      undefined,
    ]
  }
>
  
</Text>
`;

exports[`renders correctly with onPress 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  onPress={[Function]}
  style={
    Array [
      Array [
        undefined,
      ],
      undefined,
    ]
  }
>
  
</Text>
`;

exports[`renders correctly without onPress 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Array [
        undefined,
      ],
      undefined,
    ]
  }
>
  
</Text>
`;
